@@ -307,10 +307,20 @@ def _chainload(target_dir):
   sys.argv[0] = sys.executable
   for i in xrange(len(sys.path)):
       sys.path[i] = sys.path[i].replace(mydir,target_dir)
+  #  If we're in a directory inside the bootstrap dir, try to
+  #  chdir into the equivalent directory inside the version dir.
+  #  But not if we're *already* inside the version dir.
   curdir = getcwd()
-  newdir = curdir.replace(mydir,target_dir)
-  if newdir != curdir:
-      nt.chdir(newdir)
+  if not target_dir in curdir:
+      newdir = curdir.replace(mydir,target_dir)
+      if newdir != curdir:
+          try:
+              nt.chdir(newdir)
+          except EnvironmentError:
+              pass
+  #  Use the library.zip from the version dir.
+  #  It should already be in sys.path from the above env mangling,
+  #  but you never know...
   libfile = pathjoin(target_dir,"library.zip")
   if libfile not in sys.path:
       if exists(libfile):
